<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_name">

    <ListPreference
        android:defaultValue="@string/settings_unit_default"
        android:entries="@array/settings_unit_labels"
        android:entryValues="@array/settings_unit_values"
        android:key="@string/settings_unit_key"
        android:title="@string/settings_unit_label" />

    <ListPreference
        android:defaultValue="@string/male"
        android:entries="@array/settings_gender_entries"
        android:entryValues="@array/settings_gender_values"
        android:key="@string/settings_gender_key"
        android:title="@string/settings_gender_label" />

</androidx.preference.PreferenceScreen>