<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bodyfat_calc"
        android:icon='@drawable/round_accessibility_new_black_24'
        android:title="@string/bodyfat_calc"/>

    <item android:id="@+id/bmi_calc"
        android:icon="@drawable/baseline_network_check_black_24"
        android:title="@string/body_index_calc" />

    <item android:id = "@+id/calorie_calc"
        android:icon="@drawable/round_restaurant_black_24"
        android:title="@string/calorie_calc" />

    <item android:id = "@+id/macro_calc"
        android:icon="@drawable/round_donut_small_black_24"
        android:title="@string/macro_calc" />

    <item android:id="@+id/settings"
        android:icon="@drawable/round_settings_black_24"
        android:title="@string/settings_name"/>

</menu>