<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:layout_marginBottom="8dp"
            android:text="@string/greeting" />

        <TextView
            style="@style/FillerText"
            android:text="@string/settings_description"
            android:layout_marginBottom="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/bodyfat_select"
            style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/bodyfat_calc"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/baseline_settings_input_svideo_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/bodyfat_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bodyindex_select"
            style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/body_index_calc"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/round_accessibility_new_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/bodyindex_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/calorie_select"
            style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/calorie_calc"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/round_restaurant_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/calorie_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/macro_select"
            style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/macro_calc"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/round_donut_small_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/macro_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/onerm_select"
            style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/repmax_calc"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/baseline_fitness_center_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/onerm_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/measurements_select" style="@style/MainCard" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FillerHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/measurements"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/baseline_straighten_black_24" />

                <TextView
                    style="@style/FillerText"
                    android:text="@string/measurements_description" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>