<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyIndexFragment">

    <TextView
        android:id="@+id/bmi_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/body_index_calc"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/bmi_weight_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi_header"
        android:text="@string/bmi_weight_entry"
        android:textSize="16sp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/bmi_height_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi_weight_header"
        android:text="@string/bmi_height_entry"
        android:textSize="16sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/bmi_weight_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bmi_weight_header"
        android:layout_alignBaseline="@id/bmi_weight_header"
        android:hint="@string/hint_pounds"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/bmi_height_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bmi_height_header"
        android:layout_alignBaseline="@id/bmi_height_header"
        android:hint="@string/hint"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/bmi_results_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/bmi_height_header"
        android:text="@string/get_results" />

    <LinearLayout
        android:id="@+id/bmi_results_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi_results_button"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_header"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>